--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/wen-oli/Design-Patterns#readme",
   "devDependencies": {
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
 }
