--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,6 @@
     "code-runner.executorMap": {
       "typescript": "npx ts-node --files --transpile-only",
     },
+
+    "code-runner.showExecutionMessage": false
 }
